# cloudflare-tunnel-operator

./: .envrc  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  flake.nix  install.yaml
.github/workflows/: ci.yml
cloudflared-config-macro/: Cargo.toml
cloudflared-config-macro/src/: lib.rs  parser.rs
deploy/: crd.yaml  deployment.yaml  kustomization.yaml  rbac.yaml
docs/: architecture.md  configuration.md  getting-started.md  troubleshooting.md
docs/superpowers/plans/: 2026-03-25-tunnel-token-auth.md
nix/: container.nix  git-hooks.nix  package.nix  pre-commit.nix  shell.nix  treefmt.nix
scripts/: generate.sh  vendor-cloudflared.sh
src/: cloudflared_config.rs  controller.rs  crd.rs  lib.rs  main.rs
src/cloudflare/: client.rs  types.rs
src/resources/: configmap.rs  deployment.rs  gateway.rs  mod.rs  secret.rs
tests/e2e/: main.rs  tunnel_lifecycle.rs
