[package]
name = "cloudflare-tunnel-operator"
version = "0.1.0"
edition = "2024"

[lib]
name = "cloudflare_tunnel_operator"
path = "src/lib.rs"

[[bin]]
name = "cloudflare-tunnel-operator"
path = "src/main.rs"

[[test]]
name = "e2e"
path = "tests/e2e/main.rs"

[dependencies]
kube = { version = "3.1", features = ["runtime", "client", "derive", "rustls-tls"], default-features = false }
k8s-openapi = { version = "0.27", features = ["latest"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
base64 = "0.22"
rand = "0.9"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
cloudflared-config-macro = { path = "cloudflared-config-macro" }

[dev-dependencies]
kube = { version = "3.1", features = ["runtime", "client", "derive", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }
async-trait = "0.1"
